--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,14 @@ jobs:
         run: |
           sudo apt-get update -yqq
           sudo bash build-kernel
-          cp linux-msft-wsl-*/vmlinux .
+          cp linux-msft-wsl-*/jonatans-custom-linux-kernel .
       - name: Upload Kernel
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: vmlinux
-          path: vmlinux
+          name: jonatans-custom-linux-kernel
+          path: jonatans-custom-linux-kernel
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: vmlinux
+          files: jonatans-custom-linux-kernel
