--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Build Kernel
         run: |
           sudo apt-get update -yqq
           sudo bash build-kernel
-          cp linux-msft-wsl-*/jonatans-custom-linux-kernel .
+          cp linux-msft-wsl-*/vmlinux .
+
       - name: Upload Kernel
         uses: actions/upload-artifact@v4
         with:
           name: jonatans-custom-linux-kernel
-          path: jonatans-custom-linux-kernel
+          path: vmlinux
+
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
