--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,13 @@ jobs:
         run: |
           sudo apt-get update -yqq
           sudo bash build-kernel
-          cp linux-msft-wsl-*/vmlinux .
+          cp linux-msft-wsl-*/vmlinux jonatans-custom-linux-kernel
 
       - name: Upload Kernel
         uses: actions/upload-artifact@v4
         with:
-          name: jonatans-custom-linux-kernel
-          path: vmlinux
+          name: jonatans-custom-linux-kernel-${{ github.run_id }}
+          path: jonatans-custom-linux-kernel
 
       - name: Release
         uses: softprops/action-gh-release@v2
