ci: ignore docs from trigger build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ on:
       - hotfix/*
     tags:
       - linux-msft-wsl-*
+    paths-ignore:
+      - 'README.md'
+      - '.wslconfig'
+      - '.gitignore'
+      - '.idea/**'
   pull_request: {}
   workflow_call: {}
 
